--- a/ThienNga2/Views/Home/Index.cshtml
+++ b/ThienNga2/Views/Home/Index.cshtml
@@ -1,3 +1,12 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<html>
+<head>
+    <style>
+        body {
+         background: url('images/flying-drones.jpg') no-repeat center center fixed;
+        }
+    </style>
+</head>
+</html>
