thm nhom khach + màu
hì hì

--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -87,6 +87,11 @@
                     <tr>
                         <td>SKU: @it.tb_product_detail.productStoreID</td>
                     </tr>
+                    @if(it.CustomerType1 != null ) {
+                    <tr>
+                        <td bgcolor="@it.CustomerType1.Color">Nhóm khách: @it.CustomerType1.GroupName</td>
+                    </tr>
+                    }
                     <tr>
                         <td> Mã unit: @it.productID</td>
                     </tr>
