--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -235,6 +235,7 @@
 
                 </table>
                 <div class="button-section">
+                    VAT @Html.CheckBoxFor(m => m.VAT)
                     <input type="submit" name="Hoàn tất" />
                    
                 </div>
